--- a/Exercise1/about_us.html
+++ b/Exercise1/about_us.html
@@ -34,7 +34,7 @@
         <h2>Ποιοι είμαστε!</h2>
         <!-- ΕΔΩ ΝΑ ΣΗΜΕΙΩΣΩ ΟΤΙ ΘΑ ΒΑΛΟΥΜΕ ΕΙΚΟΝΑ ΜΑΣ ΚΑΙ ΔΙΠΛΑ ΛΟΓΙΑ ... ΑΥΤΟ ΘΑ ΓΙΝΕΙ ΜΕΣΩ ΣΤΟ FLOAT (ΑΝ ΘΥΜΑΜΑΙ ΚΑΛΑ) ΣΤΟ 2ο ΠΑΡΑΔΟΤΕΟ-->
         <section class="perilhpsh">
-            <h3><img src="/assets/" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
+            <h3><img src="/assets/jimmy.png" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
             <p>
                 Γεννημένος στην Αθήνα το 2001 και με καταγωγή απο Λαμία και Ιωάννινα, αποφοίτησε απο το Οικονομικό
                 Πανεπιστήμιο Αθηνών το 2016, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και γνωρίστηκε με τον
@@ -50,7 +50,7 @@
 
         <!-- ΕΔΩ ΝΑ ΣΗΜΕΙΩΣΩ ΟΤΙ ΘΑ ΒΑΛΟΥΜΕ ΕΙΚΟΝΑ ΜΑΣ ΚΑΙ ΔΙΠΛΑ ΛΟΓΙΑ ... ΑΥΤΟ ΘΑ ΓΙΝΕΙ ΜΕΣΩ ΣΤΟ FLOAT (ΑΝ ΘΥΜΑΜΑΙ ΚΑΛΑ) ΣΤΟ 2ο ΠΑΡΑΔΟΤΕΟ-->
         <section class="perilhpsh">
-            <h3><img src="/assets/" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος Μπουρτσουκλής</h3>
+            <h3><img src="/assets/tasos1.png" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος Μπουρτσουκλής</h3>
             <p>
                 Γεννήθηκε και μεγάλωσε στην Νέα Ιωνία Αττικής το έτος 2001. Ολοκλήρωσε τις σπουδές του απο το τμήμα
                 πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2016 και στην συνέχεια ασχολήθηκε με το front end
