--- a/Exercise2/about_us.html
+++ b/Exercise2/about_us.html
@@ -33,7 +33,7 @@
         <h2>Ποιοι είμαστε!</h2>
 
         <section class="perilhpsh">
-            <h3><img src="/assets/" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
+            <h3><img src="/assets/jimmy.png" id="jimmy" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
 
             <p>
                 Γεννημένος στην Αθήνα το 2001 και με καταγωγή απο Λαμία και Ιωάννινα, αποφοίτησε απο το Οικονομικό
@@ -46,7 +46,7 @@
             </p>
 
             <h3>
-                <img src="/assets/" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος Μπουρτσουκλής
+                <img src="/assets/tasos1.png" id="tasos" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος Μπουρτσουκλής
             </h3>
 
             <p>
