--- a/Exercise3/about_us.html
+++ b/Exercise3/about_us.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
-    <link rel="stylesheet" href="/Exercise2/css/omorfo.css">
+    <link rel="stylesheet" href="/Exercise3/css/omorfo.css">
 </head>
 
 <body>
@@ -18,16 +18,16 @@
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise2/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
+                <a href="/Exercise3/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
                         alt="Technodata λογότυτπο"></a>
 
                 <nav class="navigation">
-                    <a href="/Exercise2/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise2/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-                    <a href="/Exercise2/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-                    <a href="/Exercise2/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="/Exercise2/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise2/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="/Exercise3/index.html">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise3/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
+                    <a href="/Exercise3/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+                    <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="/Exercise3/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
 
             </header>
@@ -38,7 +38,7 @@
                 <h2>Ποιοι είμαστε!</h2>
 
                 <section class="perilhpsh">
-                    <h3><img src="/assets/" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
+                    <h3><img src="/assets/jimmy.png"  id="jimmy" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
 
                     <p>
                         Γεννημένος στην Αθήνα το 2001 και με καταγωγή απο Λαμία και Ιωάννινα, αποφοίτησε απο το Οικονομικό
@@ -51,7 +51,7 @@
                     </p>
 
                     <h3>
-                        <img src="/assets/" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος Μπουρτσουκλής
+                        <img src="/assets/tasos1.png" id="tasos" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος Μπουρτσουκλής
                     </h3>
 
                     <p>
@@ -77,25 +77,25 @@
             <footer class="footer-content">
                 <h4>Βρείτε μας στα ακόλουθα social media</h4>
 
-                <a href="/Exercise2/index.html">
+                <a href="/Exercise3/index.html">
                     <img src="/assets/facebook_logo.png" width="50" height="50" alt="Facebook λογότυπο">
                 </a>
 
-                <a href="/Exercise2/index.html">
+                <a href="/Exercise3/index.html">
                     <img src="/assets/twitter_logo.png" width="50" height="50" alt="Twitter λογότυπο">
                 </a>
 
-                <a href="/Exercise2/index.html">
+                <a href="/Exercise3/index.html">
                     <img src="/assets/instagram_new.png" width="50" height="50" alt="Instagram λογότυπο">
                 </a>
 
-                <a href="/Exercise2/index.html">
+                <a href="/Exercise3/index.html">
                     <img src="/assets/youtube_logo.png" width="50" height="50" alt="Youtube λογότυπο">
                 </a>
 
                 <h4>©2022 Techodata Computers</h4>
 
-                <a href="/Exercise2/index.html">
+                <a href="/Exercise3/index.html">
                     <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
