GRID LAYOUT DONE
εκανα το grid layout.
Τωρα μενει σε καθε κουτακι που εχουμε μεσα πχ εκει που ειναι τα προιοντα φωτογραφιες, να διαταξουμε αυτα τα κουτακια μεσω css flexbox

--- a/Exercise3/products-phones.html
+++ b/Exercise3/products-phones.html
@@ -32,7 +32,7 @@
             </header>
         </div>
 
-        <div class="main-item"></div>
+        <div class="main-item">
             <main class="main-content">
                 <div id="page-title">
                     <h2>Κινητά Τηλέφωνα</h2>
