τελος 3ου παραδοτεου
θελω μονο να κανεις αυτο με τις εικονες που σου ειπα στα product-card ( νομιζω ετσι τα εχεις πει)

--- a/Exercise2/index.html
+++ b/Exercise2/index.html
@@ -84,7 +84,7 @@
 
             <div class="product">
                 <a href="/Exercise2/products-phones.html">
-                    <img src="/assets/samsung_old.png" width="155" height="240" alt="Samsung S10+" class="image">
+                    <img src="/assets/samsung_old.png" width="155" height="240" alt="Samsung S10+" class="image" id="slim">
                 </a>
             </div>
 
