--- a/Exercise3/stores.html
+++ b/Exercise3/stores.html
@@ -37,21 +37,23 @@
             <main class="main-content">
                 <h2>Τα καταστήματα Αθήνας</h2>
 
-                <section class="katasthma">
-                    <h3>Κατάστημα Παγκρατίου</h3>
+                <div class="katasthmata">
+                    <section class="katasthma">
+                        <h3>Κατάστημα Παγκρατίου</h3>
 
-                    <p><img src="/assets/pagrati.png" width="480" height="300" alt="Τοποθεσία καταστήματος Παγκρατίου">
-                        Φιλολάου 111, 166 33
-                    </p>
-                </section>
+                        <p><img src="/assets/pagrati.png" width="480" height="300" alt="Τοποθεσία καταστήματος Παγκρατίου">
+                            Φιλολάου 111, 166 33
+                        </p>
+                    </section>
 
-                <section class="katasthma">
-                    <h3>Κατάστημα Νέας Ιωνίας</h3>
+                    <section class="katasthma">
+                        <h3>Κατάστημα Νέας Ιωνίας</h3>
 
-                    <p><img src="/assets/nea_ionia.png" width="480" height="300" alt="Τοποθεσία καταστήματος Νέας Ιωνίας">
-                        Λεωφ. Ηρακλείου 225, 142 31
-                    </p>
-                </section>
+                        <p><img src="/assets/nea_ionia.png" width="480" height="300" alt="Τοποθεσία καταστήματος Νέας Ιωνίας">
+                            Λεωφ. Ηρακλείου 225, 142 31
+                        </p>
+                    </section>
+                </div>
             </main>
         </div>
 
