--- a/Exercise3/index.html
+++ b/Exercise3/index.html
@@ -48,60 +48,64 @@
 
                     <p>Νέα κομμάτια διαθέσιμα σε όλες τις αποχρώσεις και χωρητικότητες!</p>
 
-                    <div class="product">
-                        <a href="/Exercise3/product-iphone14-pro-max.html">
-                            <img src="/assets/iphone14pro.png" width="245" height="230" alt="Apple iPhone 14 Pro Max"
-                                class="image">
-                        </a>
-                    </div>
+                    <div class="prod-photos">
+                        <div class="product">
+                            <a href="/Exercise3/product-iphone14-pro-max.html">
+                                <img src="/assets/iphone14pro.png" width="245" height="230" alt="Apple iPhone 14 Pro Max"
+                                    class="image">
+                            </a>
+                        </div>
 
-                    <div class="product">
-                        <a href="/Exercise3/products-phones.html">
-                            <img src="/assets/samsungs22.png" width="245" height="230" alt="Samsung S22 Ultra" class="image">
-                        </a>
-                    </div>
+                        <div class="product">
+                            <a href="/Exercise3/products-phones.html">
+                                <img src="/assets/samsungs22.png" width="245" height="230" alt="Samsung S22 Ultra" class="image">
+                            </a>
+                        </div>
 
-                    <div class="product">
-                        <a href="/Exercise3/products-phones.html">
-                            <img src="/assets/xiaomi.png" width="260" height="230" alt="Xiaomi 12T Pro" class="image">
-                        </a>
-                    </div>
+                        <div class="product">
+                            <a href="/Exercise3/products-phones.html">
+                                <img src="/assets/xiaomi.png" width="260" height="230" alt="Xiaomi 12T Pro" class="image">
+                            </a>
+                        </div>
 
-                    <div class="product">
-                        <a href="/Exercise3/products-phones.html">
-                            <img src="/assets/ipad.png" width="230" height="230" alt="Apple iPad Pro" class="image">
-                        </a>
+                        <div class="product">
+                            <a href="/Exercise3/products-phones.html">
+                                <img src="/assets/ipad.png" width="230" height="230" alt="Apple iPad Pro" class="image">
+                            </a>
+                        </div>
                     </div>
                 </section>
 
+                
                 <section class="section-promote">
                     <h2>Hot Προσφορές</h2>
 
                     <p>Εκθεσιακά προϊόντα και προηγούμενης γενίας σε μειωμένες τιμές</p>
 
-                    <div class="product">
-                        <a href="/Exercise3/products-phones.html">
-                            <img src="/assets/iphone_old.png" width="255" height="240" alt="Apple iPhone 11" class="image">
-                        </a>
-                    </div>
+                    <div class="prod-photos">
+                        <div class="product">
+                            <a href="/Exercise3/products-phones.html">
+                                <img src="/assets/iphone_old.png" width="255" height="240" alt="Apple iPhone 11" class="image">
+                            </a>
+                        </div>
 
-                    <div class="product">
-                        <a href="/Exercise3/products-phones.html">
-                            <img src="/assets/samsung_old.png" width="155" height="240" alt="Samsung S10+" class="image">
-                        </a>
-                    </div>
+                        <div class="product">
+                            <a href="/Exercise3/products-phones.html">
+                                <img src="/assets/samsung_old.png" width="155" height="240" alt="Samsung S10+" class="image" id="slim">
+                            </a>
+                        </div>
 
-                    <div class="product">
-                        <a href="/Exercise3/products-phones.html">
-                            <img src="/assets/xiaomi_old.png" width="255" height="240" alt="Xiaomi Pad 5" class="image">
-                        </a>
-                    </div>
+                        <div class="product">
+                            <a href="/Exercise3/products-phones.html">
+                                <img src="/assets/xiaomi_old.png" width="255" height="240" alt="Xiaomi Pad 5" class="image">
+                            </a>
+                        </div>
 
-                    <div class="product">
-                        <a href="/Exercise3/products-phones.html">
-                            <img src="/assets/apple_watch.png" width="255" height="240" alt="Apple Watch Series 2"
-                                class="image">
-                        </a>
+                        <div class="product">
+                            <a href="/Exercise3/products-phones.html">
+                                <img src="/assets/apple_watch.png" width="255" height="240" alt="Apple Watch Series 2" class="image">
+                            </a>
+                        </div>
                     </div>
                 </section>
             </main>
