--- a/Exercise3/contact.html
+++ b/Exercise3/contact.html
@@ -86,7 +86,7 @@
                     </form>
                 </div>
             </main>
-        
+        </div>
 
         
         <div class="footer-item">
