--- a/Exercise3/index.html
+++ b/Exercise3/index.html
@@ -23,8 +23,7 @@
 
                 <nav class="navigation">
                     <a href="/Exercise3/index.html" class="active">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise3/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-                    <a href="/Exercise3/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+                    <a href="/Exercise3/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
                     <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
                     <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
