--- a/Exercise3/product-categories.html
+++ b/Exercise3/product-categories.html
@@ -21,9 +21,8 @@
                         alt="Technodata λογότυτπο"></a>
 
                 <nav class="navigation">
-                    <a href="/Exercise3/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise3/product-categories.html#technology" class="active">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-                    <a href="/Exercise3/product-categories.html#spiti" class="active">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+                    <a href="/Exercise3/index.html" class="active">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise3/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
                     <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
                     <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
@@ -61,7 +60,8 @@
 
                         <li class="category-card">
                             <a href="/Exercise3/products-pcs.html">
-                                <img class="image" src="/assets/pcs.png" width="200" height="200" alt="εικόνα κατηγορίας ήχου">
+                                <img class="image" src="/assets/pcs.png" width="200" height="200"
+                                    alt="εικόνα κατηγορίας ήχου">
 
 
                                 <h3 class="category-name">
@@ -157,7 +157,8 @@
 
                         <li class="category-card">
                             <a href="/Exercise3/product-categories.html">
-                                <img class="image" src="/assets/vacuums.png" width="200" height="200" alt="εικόνα κατηγορίας">
+                                <img class="image" src="/assets/vacuums.png" width="200" height="200"
+                                    alt="εικόνα κατηγορίας">
 
                                 <h3 class="category-name">
                                     Σκούπες
@@ -332,7 +333,8 @@
                 <h4>©2022 Techodata Computers</h4>
 
                 <a href="/Exercise3/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                        alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
         </div>
