--- a/Exercise3/about_us.html
+++ b/Exercise3/about_us.html
@@ -22,12 +22,11 @@
                         alt="Technodata λογότυτπο"></a>
 
                 <nav class="navigation">
-                    <a href="/Exercise3/index.html">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise3/product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-                    <a href="/Exercise3/product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
+                    <a href="/Exercise3/index.html" class="active">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise3/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
                     <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="/Exercise3/about_us.html" class="active">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
 
             </header>
@@ -38,36 +37,48 @@
                 <h2>Ποιοι είμαστε!</h2>
 
                 <section class="perilhpsh">
-                    <h3><img src="/assets/jimmy.png"  id="jimmy" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος Παρασκευιώτης</h3>
+                    <h3><img src="/assets/jimmy.png" id="jimmy" alt="Φωτογραφία Δημήτρη Παρασκευιώτη">Δημήτριος
+                        Παρασκευιώτης</h3>
 
                     <p>
-                        Γεννημένος στην Αθήνα το 2001 και με καταγωγή απο Λαμία και Ιωάννινα, αποφοίτησε απο το Οικονομικό
-                        Πανεπιστήμιο Αθηνών το 2016, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και γνωρίστηκε με τον
+                        Γεννημένος στην Αθήνα το 2001 και με καταγωγή απο Λαμία και Ιωάννινα, αποφοίτησε απο το
+                        Οικονομικό
+                        Πανεπιστήμιο Αθηνών το 2016, συγκεκριμένα απο το τμήμα της πληροφορικής, όπου και γνωρίστηκε με
+                        τον
                         συνιδρυτή του Technodata Αναστάσιο Μπουρτσουκλή.
-                        <br>Ασχολήθηκε εκτενώς στην συνέχεια με το Web Design και Digital Marketing, καθώς και με την εκμάθηση
+                        <br>Ασχολήθηκε εκτενώς στην συνέχεια με το Web Design και Digital Marketing, καθώς και με την
+                        εκμάθηση
                         καίριων ικανοτήτων και ξένων γλωσσών.
-                        <br>Απο μικρός δεν έκρυψε το πάθος για αθλήματα, όπως το μπάσκετ και η ξιφασκία, στα οποία εξακολουθεί
+                        <br>Απο μικρός δεν έκρυψε το πάθος για αθλήματα, όπως το μπάσκετ και η ξιφασκία, στα οποία
+                        εξακολουθεί
                         να προπονείται και να παρακολουθεί.
                     </p>
 
                     <h3>
-                        <img src="/assets/tasos1.png" id="tasos" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος Μπουρτσουκλής
+                        <img src="/assets/tasos1.png" id="tasos" alt="Φωτογραφία Τάσου Μπουρτσουκλή">Αναστάσιος
+                        Μπουρτσουκλής
                     </h3>
 
                     <p>
-                        Γεννήθηκε και μεγάλωσε στην Νέα Ιωνία Αττικής το έτος 2001. Ολοκλήρωσε τις σπουδές του απο το τμήμα
-                        πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2016 και στην συνέχεια ασχολήθηκε με το front end
+                        Γεννήθηκε και μεγάλωσε στην Νέα Ιωνία Αττικής το έτος 2001. Ολοκλήρωσε τις σπουδές του απο το
+                        τμήμα
+                        πληροφορικής του Οικονομικού Πανεπιστημίου Αθηνών το 2016 και στην συνέχεια ασχολήθηκε με το
+                        front end
                         development.
-                        <br>Είναι κάτοχος ανώτατου πτυχίου ξένων γλωσσών στα Αγγλικά και Γαλλικά και στον ελευθερό του χρόνο
+                        <br>Είναι κάτοχος ανώτατου πτυχίου ξένων γλωσσών στα Αγγλικά και Γαλλικά και στον ελευθερό του
+                        χρόνο
                         ασχολείται με τον μηχανοκίνητο αθλητισμό και το χόμπι του για αμάξια.
                     </p>
                 </section>
 
                 <p id="synexeia-perilhpshs">
-                    Οι δρόμοι τους θα συναντηθούν ξανα το 2022, όπου αποφάσισαν να αφήσουν τις θέσεις τους στις εταιρείες που
+                    Οι δρόμοι τους θα συναντηθούν ξανα το 2022, όπου αποφάσισαν να αφήσουν τις θέσεις τους στις
+                    εταιρείες που
                     εργαζόντουσαν και να ιδρύσουν το Technodata.
-                    <br>Πλέον, έχοντας περισσότερα απο 15 καταστήματα σε Ελλάδα και Κύπρο, ο όμιλος Technodata προσφέρει μια
-                    ευρεία γκάμα προϊόντων τεχνολογίας και συσκευών για το σπίτι με την καλύτερη εξυπηρέτηση και τιμές της
+                    <br>Πλέον, έχοντας περισσότερα απο 15 καταστήματα σε Ελλάδα και Κύπρο, ο όμιλος Technodata προσφέρει
+                    μια
+                    ευρεία γκάμα προϊόντων τεχνολογίας και συσκευών για το σπίτι με την καλύτερη εξυπηρέτηση και τιμές
+                    της
                     αγοράς.
                 </p>
             </main>
@@ -96,7 +107,8 @@
                 <h4>©2022 Techodata Computers</h4>
 
                 <a href="/Exercise3/index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                        alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
         </div>
