--- a/Exercise3/stores.html
+++ b/Exercise3/stores.html
@@ -23,12 +23,11 @@
                         alt="Technodata λογότυτπο"></a>
 
                 <nav class="navigation">
-                    <a href="index.html">ΑΡΧΙΚΗ</a>
-                    <a href="product-categories.html#technology">ΠΡΟΙΟΝΤΑ ΚΑΙ ΤΕΧΝΟΛΟΓΙΑ</a>
-                    <a href="product-categories.html#spiti">ΓΙΑ ΤΟ ΣΠΙΤΙ</a>
-                    <a href="stores.html" class="active">ΚΑΤΑΣΤΗΜΑΤΑ</a>
-                    <a href="contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-                    <a href="about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="/Exercise3/index.html" class="active">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise3/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
+                    <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
             </header>
         </div>
@@ -41,7 +40,8 @@
                     <section class="katasthma">
                         <h3>Κατάστημα Παγκρατίου</h3>
 
-                        <p><img src="/assets/pagrati.png" width="480" height="300" alt="Τοποθεσία καταστήματος Παγκρατίου">
+                        <p><img src="/assets/pagrati.png" width="480" height="300"
+                                alt="Τοποθεσία καταστήματος Παγκρατίου">
                             Φιλολάου 111, 166 33
                         </p>
                     </section>
@@ -49,7 +49,8 @@
                     <section class="katasthma">
                         <h3>Κατάστημα Νέας Ιωνίας</h3>
 
-                        <p><img src="/assets/nea_ionia.png" width="480" height="300" alt="Τοποθεσία καταστήματος Νέας Ιωνίας">
+                        <p><img src="/assets/nea_ionia.png" width="480" height="300"
+                                alt="Τοποθεσία καταστήματος Νέας Ιωνίας">
                             Λεωφ. Ηρακλείου 225, 142 31
                         </p>
                     </section>
@@ -80,7 +81,8 @@
                 <h4>©2022 Techodata Computers</h4>
 
                 <a href="index.html">
-                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50" alt="Tecnhodata λογότυπο">
+                    <img src="/assets/Technodata-logos_cropped_footer.png" width="170" height="50"
+                        alt="Tecnhodata λογότυπο">
                 </a>
             </footer>
         </div>
