--- a/Exercise3/product-iphone14-pro-max.html
+++ b/Exercise3/product-iphone14-pro-max.html
@@ -23,7 +23,7 @@
                 </a>
 
                 <nav class="navigation">
-                    <a href="/Exercise3/index.html" class="active">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise3/index.html">ΑΡΧΙΚΗ</a>
                     <a href="/Exercise3/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
                     <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
