--- a/Exercise3/products-pcs.html
+++ b/Exercise3/products-pcs.html
@@ -21,8 +21,8 @@
                         alt="Technodata λογότυτπο"></a>
 
                 <nav class="navigation">
-                    <a href="/Exercise3/index.html" class="active">ΑΡΧΙΚΗ</a>
-                    <a href="/Exercise3/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
+                    <a href="/Exercise3/index.html">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise3/product-categories.html" class="active">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
                     <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
                     <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
