--- a/Exercise3/stores.html
+++ b/Exercise3/stores.html
@@ -23,9 +23,9 @@
                         alt="Technodata λογότυτπο"></a>
 
                 <nav class="navigation">
-                    <a href="/Exercise3/index.html" class="active">ΑΡΧΙΚΗ</a>
+                    <a href="/Exercise3/index.html">ΑΡΧΙΚΗ</a>
                     <a href="/Exercise3/product-categories.html">ΚΑΤΗΓΟΡΙΕΣ ΠΡΟΪΟΝΤΩΝ</a>
-                    <a href="/Exercise3/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
+                    <a href="/Exercise3/stores.html" class="active">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise3/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
                     <a href="/Exercise3/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
                 </nav>
