some changes in index 99% done i believe
βαριεμαι να κανω τωρα αλλα θα ηθελα να κανω μερικα φοντ στο index να μικραινει ... θα το κανω αυριο

--- a/Exercise4/about_us.html
+++ b/Exercise4/about_us.html
@@ -18,8 +18,15 @@
     <div class="grid-container">
         <div class="header-item">
             <header class="header-light-color">
-                <a href="/Exercise4/index.html"><img src="/assets/Technodata-logos_black.png" width="700" height="160"
-                        alt="Technodata λογότυτπο"></a>
+                <a href="/Exercise4/index.html">
+                    <img srcset="/assets/Technodata-logos_black_SR.png 600w,
+                        /assets/Technodata-logos_black_MR.png 768w,
+                        /assets/Technodata-logos_black_LR.png 1000w"
+                        sizes="(max-width: 600px) 80vw,
+                            (max-width: 768px) 100vw,
+                            1000px"
+                    src="/assets/Technodata-logos_black_LR.png" alt="Technodata λογότυτπο">
+                </a>
 
                 <nav class="navigation">
                     <a href="/Exercise4/index.html">ΑΡΧΙΚΗ</a>
