DESKTOP/LAPTOP MODE CHANGES
αρχικη αν οχι ετοιμη 99% ετοιμη
product categories νομιζω το εκανα ωραιο και αυτο
ειπαμε ηδη ετοιμα τα about us και contact
μενει η μαλακια μανουρα με stores
πολυ λιγο να δοκιμασω κατι product-pcs, product-phones
να φτιαξω και το iphone14promax σελιδα και τελος

--- a/Exercise4/index.html
+++ b/Exercise4/index.html
@@ -69,13 +69,13 @@
 
                         <div class="product">
                             <a href="/Exercise4/products-phones.html">
-                                <img src="/assets/xiaomi.png" width="260" height="230" alt="Xiaomi 12T Pro" class="image">
+                                <img src="/assets/xiaomi_new.png" width="245" height="230" alt="Xiaomi 12T Pro" class="image">
                             </a>
                         </div>
 
                         <div class="product">
                             <a href="/Exercise4/products-phones.html">
-                                <img src="/assets/ipad.png" width="230" height="230" alt="Apple iPad Pro" class="image">
+                                <img src="/assets/ipad_new.png" width="245" height="230" alt="Apple iPad Pro" class="image">
                             </a>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
 
                         <div class="product">
                             <a href="/Exercise4/products-phones.html">
-                                <img src="/assets/samsung_old.png" width="255" height="240" alt="Samsung S10+" class="image" id="slim">
+                                <img src="/assets/samsung_old.png" width="255" height="240" alt="Samsung S10+" class="image">
                             </a>
                         </div>
 
@@ -108,7 +108,7 @@
 
                         <div class="product">
                             <a href="/Exercise4/products-phones.html">
-                                <img src="/assets/apple_watch.png" width="255" height="240" alt="Apple Watch Series 2" class="image">
+                                <img src="/assets/apple_watch_new.png" width="255" height="240" alt="Apple Watch Series 2" class="image">
                             </a>
                         </div>
                     </div>
