Implemented signup's validation.
It needs some fixes in order to work.
CSS needs work too.

--- a/Exercise5/sign_up.html
+++ b/Exercise5/sign_up.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="co-authored by Anastasios Mpourtsouklis, Dimitrios Paraskeuiotis">
     <link rel="stylesheet" href="/Exercise5/css/style.css">
-    <script src="/Exercise5/javascript/rules.js" type="text/javascript"></script>
+    <script src="/Exercise5/javascript/validation.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -36,167 +36,172 @@
             </header>
         </div>
 
-        <div class="main-item">
-            <main class="main-content">
-                <div class="forma">
-                    <form action="sign_up.html" method="GET" enctype="multipart/form-data" class="forma-yposthrikshs">
-                        <fieldset class="input">
-                            <legend class="inputTitle">Προσωπικά Στοιχεία</legend>
-                            <label for="firstName">Όνομα:</label>
-                            <input id="firstName" name="firstName" type="text" autocomplete="given-name"
-                                placeholder="Ιωάννης" required>
+        <main class="main-content">
+            <form id="form" action="sign_up.html" method="GET" enctype="multipart/form-data">
+                <fieldset>
+                    <legend>Προσωπικά Στοιχεία</legend>
 
-                            <label for="lastName">Επώνυμο:</label>
-                            <input id="lastName" name="lastName" type="text" autocomplete="family-name"
-                                placeholder="Ιωάννου" required>
+                    <label for="firstName">Ονοματεπώνυμο:</label>
+                    <div class="formControl">
+                        <input id="firstName" name="firstName" type="text" autocomplete="given-name"
+                            placeholder="Όνομα">
+                        <small>Error Message</small>
+                    </div>
+                    <div class="formControl">
+                        <input id="lastName" name="lastName" type="text" autocomplete="family-name"
+                            placeholder="Επώνυμο">
+                        <small>Error Message</small>
+                    </div>
 
-                            <label for="email">E-Mail:</label>
-                            <input id="email" name="email" type="email" autocomplete="off"
-                                placeholder="someone@gmail.com" required>
+                    <label for="email">E-Mail:</label>
+                    <div class="formControl">
+                        <input id="email" name="email" type="email" autocomplete="off" placeholder="someone@gmail.com">
+                        <small>Error Message</small>
+                    </div>
 
-                            <label for="tel">Τηλέφωνο Επικοινωνίας:</label>
-                            <input id="tel" name="tel" type="text" autocomplete="tel-national" placeholder="6912345678"
-                                required>
+                    <label for="tel">Τηλέφωνο Επικοινωνίας:</label>
+                    <div class="formControl">
+                        <input id="tel" name="tel" type="text" autocomplete="tel-national" placeholder="6912345678">
+                        <small>Error Message</small>
+                    </div>
 
-                            <label for="bDay">Ημερομηνία Γέννησης:</label>
-                            <input id="bDay" name="bDay" type="date" autocomplete="bday" required>
-                        </fieldset>
+                    <label for="bDay">Ημερομηνία Γέννησης:</label>
+                    <div class="formControl">
+                        <input id="bDay" name="bDay" type="date" autocomplete="bday">
+                        <small>Error Message</small>
+                    </div>
+                </fieldset>
 
-                        <fieldset class="input">
-                            <legend class="inputTitle">Διεύθυνση Κατοικίας</legend>
-                            <label for="region">Περιφέρεια:</label>
-                            <input id="region" name="region" type="text" autocomplete="address-level1"
-                                placeholder="Αθήνα" list="regions" required>
-                            <datalist id="regions">
-                                <option value="Στερεά Ελλάδα">
-                                <option value="Μακεδονία">
-                                <option value="Πελοπόννησος">
-                                <option value="Κρήτη">
-                                <option value="Ήπειρος">
-                                <option value="Θεσσαλία">
-                                <option value="Θράκη">
-                                <option value="Νήσοι Αιγαίου Πελάγους">
-                                <option value="Νήσοι Ιονίου Πελάγους">
-                            </datalist>
+                <!-- <fieldset>
+                    <legend>Διεύθυνση Κατοικίας</legend>
 
-                            <label for="county">Νομός:</label>
-                            <input id="county" name="county" type="text" autocomplete="address-level2"
-                                placeholder="Αθήνα" list="counties" required>
-                            <datalist id="counties">
-                                <option value="Αττική">
-                                <option value="Εύβοια">
-                                <option value="Ευρυτανία">
-                                <option value="Φθιώτιδα">
-                                <option value="Αιτωλοακαρνανία">
-                                <option value="Βοιωτία">
-                                <option value="Φωκίδα">
-                            </datalist>
+                    <label for="region">Περιφέρεια:</label>
+                    <input id="region" name="region" type="text" autocomplete="address-level1"
+                        placeholder="Στερεά Ελλάδα" list="regions">
+                    <datalist id="regions">
+                        <option value="Στερεά Ελλάδα">
+                        <option value="Μακεδονία">
+                        <option value="Πελοπόννησος">
+                        <option value="Κρήτη">
+                        <option value="Ήπειρος">
+                        <option value="Θεσσαλία">
+                        <option value="Θράκη">
+                        <option value="Νήσοι Αιγαίου Πελάγους">
+                        <option value="Νήσοι Ιονίου Πελάγους">
+                    </datalist>
 
-                            <label for="postalCode">Τ.Κ.:</label>
-                            <input id="postalCode" name="postalCode" type="text" autocomplete="postal-code"
-                                placeholder="104 34" required>
+                    <label for="county">Νομός:</label>
+                    <input id="county" name="county" type="text" autocomplete="address-level2" placeholder="Αττική"
+                        list="counties">
+                    <datalist id="counties">
+                        <option value="Αττική">
+                        <option value="Εύβοια">
+                        <option value="Ευρυτανία">
+                        <option value="Φθιώτιδα">
+                        <option value="Αιτωλοακαρνανία">
+                        <option value="Βοιωτία">
+                        <option value="Φωκίδα">
+                    </datalist>
 
-                            <label for="address">Διεύθυνση:</label>
-                            <input id="address" name="address" type="text" autocomplete="address-line1"
-                                placeholder="28ης Οκτωβρίου 76" required>
-                        </fieldset>
+                    <label for="postalCode">Τ.Κ.:</label>
+                    <input id="postalCode" name="postalCode" type="text" autocomplete="postal-code"
+                        placeholder="104 34">
 
+                    <label for="address">Διεύθυνση:</label>
+                    <input id="address" name="address" type="text" autocomplete="address-line1"
+                        placeholder="28ης Οκτωβρίου 76">
+                </fieldset>
 
-                        <fieldset class="input">
-                            <legend class="inputTitle">Στοιχεία Πληρωμής</legend>
-                            <input type="radio" id="creditCard" name="payment" value="creditCard">
-                            <label for="creditCard">Πιστωτική κάρτα</label>
+                <fieldset>
+                    <legend>Στοιχεία Πληρωμής</legend>
 
-                            <input type="radio" id="payPal" name="payment" value="payPal">
-                            <label for="payPal">PayPal</label>
+                    <input type="radio" id="creditCard" name="payment" value="creditCard">
+                    <label for="creditCard">Πιστωτική κάρτα</label>
 
-                            <input type="radio" id="onDelivery" name="payment" value="onDelivery" checked>
-                            <label for="onDelivery">Αντικαταβολή (+2€)</label>
+                    <input type="radio" id="payPal" name="payment" value="payPal">
+                    <label for="payPal">PayPal</label>
 
-                            <label for="ccNumber">Αριθμός Κάρτας:</label>
-                            <input id="ccNumber" name="ccNumber" type="text" autocomplete="cc-number"
-                                placeholder="0000 1111 2222 3333">
+                    <input type="radio" id="onDelivery" name="payment" value="onDelivery" checked>
+                    <label for="onDelivery">Αντικαταβολή (+2€)</label>
 
-                            <label for="ccExpDate">Ημερομηνία Λήξης:</label>
-                            <input id="ccExpDate" name="ccExpDate" type="date" autocomplete="cc-exp">
+                    <label for="ccNumber">Αριθμός Κάρτας:</label>
+                    <input id="ccNumber" name="ccNumber" type="text" autocomplete="cc-number"
+                        placeholder="0000 1111 2222 3333">
 
+                    <label for="ccExpDate">Ημερομηνία Λήξης:</label>
+                    <input id="ccExpDate" name="ccExpDate" type="date" autocomplete="cc-exp">
 
-                            <div class="forma-input">
-                                <label for="ccCode">Κωδικός:</label>
-                                <input id="ccCode" name="ccCode" type="password" autocomplete="cc-csc"
-                                    placeholder="123">
+                    <label for="ccCode">Κωδικός:</label>
+                    <input id="ccCode" name="ccCode" type="password" autocomplete="cc-csc" placeholder="123">
 
+                    <label for="ccName">Ονοματεπώνυμο Κατόχου:</label>
+                    <input id="ccName" name="ccName" type="text" autocomplete="cc-name" placeholder="ION IOANNOY">
+                </fieldset>
 
-                                <label for="ccName">Ονοματεπώνυμο Κατόχου:</label>
-                                <input id="ccName" name="ccName" type="text" autocomplete="cc-name"
-                                    placeholder="ION IOANNOY">
+                <fieldset>
+                    <legend>Στοιχεία Ταυτοποίησης Χρήστη</legend>
 
-                        </fieldset>
+                    <label for="username">Username:</label>
+                    <input id="username" name="username" type="text" autocomplete="username" placeholder="ionioan">
 
-                        <fieldset class="input">
-                            <legend class="inputTitle">Στοιχεία Ταυτοποίησης Χρήστη</legend>
-                            <label for="username">Username:</label>
-                            <input id="username" name="username" type="text" autocomplete="username"
-                                placeholder="ionioan" required>
+                    <label for="password">Password:</label>
+                    <input id="password" name="password" type="password" autocomplete="new-password">
 
-                            <label for="password">Password:</label>
-                            <input id="password" name="password" type="password" autocomplete="new-password" required>
+                    <label for="password1">Password:</label>
+                    <input id="password1" name="password1" type="password" autocomplete="off">
+                </fieldset>
 
-                            <label for="password1">Password:</label>
-                            <input id="password1" name="password1" type="password" autocomplete="off" required>
-                        </fieldset>
+                <fieldset>
+                    <legend>Επιλογές Επικοινωνίας</legend>
 
-                        <fieldset class="input">
-                            <legend class="inputTitle">Επιλογές Επικοινωνίας</legend>
-                            <input type="radio" id="mail" name="contact" value="mail" checked>
-                            <label for="mail">E-Mail</label>
+                    <input type="radio" id="mail" name="contact" value="mail" checked>
+                    <label for="mail">E-Mail</label>
 
-                            <input type="radio" id="sms" name="contact" value="sms">
-                            <label for="sms">SMS</label>
+                    <input type="radio" id="sms" name="contact" value="sms">
+                    <label for="sms">SMS</label>
 
-                            <input type="radio" id="iMess" name="contact" value="iMess">
-                            <label for="iMess">iMessage</label>
-                        </fieldset>
+                    <input type="radio" id="iMess" name="contact" value="iMess">
+                    <label for="iMess">iMessage</label>
+                </fieldset>
 
-                        <fieldset class="input">
-                            <legend class="inputTitle">Ερωτηματολόγιο</legend>
-                            <label for="askFrequency">Ποιός είναι ο πιο συχνός τρόπος πληρωμής που
-                                χρησιμοποιείται;</label>
-                            <select name="askFrequency" id="askFrequency">
-                                <option value="everyDay">Καθημερινά</option>
-                                <option value="everyWeek">Εβδομαδιαία</option>
-                                <option value="everyMonth">Μηνιαία</option>
-                            </select>
+                <fieldset>
+                    <legend>Ερωτηματολόγιο</legend>
 
-                            <label for="askCategory">Από ποιά κατηγορία προϊόντων αγοράζετε πιο συχνά;</label>
-                            <select name="askCategory" id="askCategory">
-                                <option value="tecnhology">Τεχνολογία</option>
-                                <option value="home">Σπίτι</option>
-                                <option value="auto">Αυτοκίνητο - Μηχανή</option>
-                            </select>
+                    <label for="askFrequency">Ποιός είναι ο πιο συχνός τρόπος πληρωμής που
+                        χρησιμοποιείται;</label>
+                    <select name="askFrequency" id="askFrequency">
+                        <option value="everyDay">Καθημερινά</option>
+                        <option value="everyWeek">Εβδομαδιαία</option>
+                        <option value="everyMonth">Μηνιαία</option>
+                    </select>
 
-                            <label for="askPayment">Ποιός είναι ο πιο συχνός τρόπος πληρωμής που
-                                χρησιμοποιείται;</label>
-                            <select name="askPayment" id="askPayment">
-                                <option value="creditCard">Πιστωτική κάρτα</option>
-                                <option value="payPal">PayPal</option>
-                                <option value="onDelivery">Αντικαταβολή</option>
-                            </select>
-                        </fieldset>
+                    <label for="askCategory">Από ποιά κατηγορία προϊόντων αγοράζετε πιο συχνά;</label>
+                    <select name="askCategory" id="askCategory">
+                        <option value="tecnhology">Τεχνολογία</option>
+                        <option value="home">Σπίτι</option>
+                        <option value="auto">Αυτοκίνητο - Μηχανή</option>
+                    </select>
 
-                        <fieldset id="checks">
-                            <input type="checkbox" id="approveTerms" name="terms" value="approve" required />
-                            <label for="approveTerms">Αποδοχή των <a href="">Όρων και Προϋποθέσεων</a>.</label>
+                    <label for="askPayment">Ποιός είναι ο πιο συχνός τρόπος πληρωμής που
+                        χρησιμοποιείται;</label>
+                    <select name="askPayment" id="askPayment">
+                        <option value="creditCard">Πιστωτική κάρτα</option>
+                        <option value="payPal">PayPal</option>
+                        <option value="onDelivery">Αντικαταβολή</option>
+                    </select>
+                </fieldset>
 
-                            <input type="checkbox" id="subscribeNews" name="newsletter" value="subscribe" checked/>
-                            <label for="subscribeNews">Εγγραφή στην εφημερίδα.</label>
-                        </fieldset>
+                <fieldset id="checks">
+                    <input type="checkbox" id="approveTerms" name="terms" value="approve" />
+                    <label for="approveTerms">Αποδοχή των <a href="">Όρων και Προϋποθέσεων</a>.</label>
 
-                        <input type="submit" value="Εγγραφή" />
-                    </form>
-                </div>
-            </main>
-        </div>
+                    <input type="checkbox" id="subscribeNews" name="newsletter" value="subscribe" checked />
+                    <label for="subscribeNews">Εγγραφή στην εφημερίδα.</label>
+                </fieldset> -->
+
+                <input type="submit" value="Εγγραφή" />
+            </form>
+        </main>
 
         <div class="footer-item">
             <footer class="footer-content">
