--- a/Exercise5/sign_up.html
+++ b/Exercise5/sign_up.html
@@ -32,175 +32,183 @@
                     <a href="/Exercise5/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise5/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
                     <a href="/Exercise5/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
+                    <a href="/Exercise5/index.html" id="login">ΣΥΝΔΕΣΗ</a>
                 </nav>
             </header>
         </div>
 
-        <main class="main-content">
-            <form id="form" onsubmit="validate()">
-                <fieldset>
-                    <legend>Προσωπικά Στοιχεία</legend>
+        <div class="main-item">
+            <main class="main-content">
+                <h2>Δημιουργία Λογαριασμού</h2>
 
-                    <label for="firstName">Ονοματεπώνυμο:</label>
-                    <div class="formControl">
-                        <input id="firstName" name="firstName" type="text" autocomplete="given-name"
-                            placeholder="Όνομα">
-                    </div>
-                    <div class="formControl">
-                        <input id="lastName" name="lastName" type="text" autocomplete="family-name"
-                            placeholder="Επώνυμο">
-                    </div>
+                <form id="form" onsubmit="validate()" method="" enctype="">
+                    <fieldset>
+                        <legend>Προσωπικά Στοιχεία</legend>
 
-                    <!-- 
-                    <label for="email">E-Mail:</label>
-                    <div class="formControl">
-                        <input id="email" name="email" type="email" autocomplete="off" placeholder="someone@gmail.com">
-                        <small>Error Message</small>
-                    </div>
+                        <label for="firstName">Ονοματεπώνυμο:</label>
+                        <div id="nameFields">
+                            <div class="formControl">
+                                <input id="firstName" name="firstName" type="text" autocomplete="given-name"
+                                    placeholder="Όνομα">
+                            </div>
+                            <div class="formControl">
+                                <input id="lastName" name="lastName" type="text" autocomplete="family-name"
+                                    placeholder="Επώνυμο">
+                            </div>
+                        </div>
 
-                    <label for="tel">Τηλέφωνο Επικοινωνίας:</label>
-                    <div class="formControl">
-                        <input id="tel" name="tel" type="text" autocomplete="tel-national" placeholder="6912345678">
-                        <small>Error Message</small>
-                    </div>
+                        <label for="email">E-Mail:</label>
+                        <div class="formControl">
+                            <input id="email" name="email" type="email" autocomplete="off"
+                                placeholder="someone@gmail.com">
+                        </div>
 
-                    <label for="bDay">Ημερομηνία Γέννησης:</label>
-                    <div class="formControl">
-                        <input id="bDay" name="bDay" type="date" autocomplete="bday">
-                        <small>Error Message</small>
-                    </div> -->
-                </fieldset>
+                        <label for="tel">Τηλέφωνο Επικοινωνίας:</label>
+                        <div class="formControl">
+                            <input id="tel" name="tel" type="text" autocomplete="tel-national" placeholder="6912345678">
+                        </div>
 
-                <!-- <fieldset>
-                    <legend>Διεύθυνση Κατοικίας</legend>
+                        <label for="bDay">Ημερομηνία Γέννησης:</label>
+                        <div class="formControl">
+                            <input id="bDay" name="bDay" type="date" autocomplete="bday">
+                        </div>
+                    </fieldset>
 
-                    <label for="region">Περιφέρεια:</label>
-                    <input id="region" name="region" type="text" autocomplete="address-level1"
-                        placeholder="Στερεά Ελλάδα" list="regions">
-                    <datalist id="regions">
-                        <option value="Στερεά Ελλάδα">
-                        <option value="Μακεδονία">
-                        <option value="Πελοπόννησος">
-                        <option value="Κρήτη">
-                        <option value="Ήπειρος">
-                        <option value="Θεσσαλία">
-                        <option value="Θράκη">
-                        <option value="Νήσοι Αιγαίου Πελάγους">
-                        <option value="Νήσοι Ιονίου Πελάγους">
-                    </datalist>
+                    <fieldset>
+                        <legend>Διεύθυνση Κατοικίας</legend>
 
-                    <label for="county">Νομός:</label>
-                    <input id="county" name="county" type="text" autocomplete="address-level2" placeholder="Αττική"
-                        list="counties">
-                    <datalist id="counties">
-                        <option value="Αττική">
-                        <option value="Εύβοια">
-                        <option value="Ευρυτανία">
-                        <option value="Φθιώτιδα">
-                        <option value="Αιτωλοακαρνανία">
-                        <option value="Βοιωτία">
-                        <option value="Φωκίδα">
-                    </datalist>
+                        <label for="region">Περιφέρεια:</label>
+                        <input id="region" name="region" type="text" autocomplete="address-level1"
+                            placeholder="Στερεά Ελλάδα" list="regions">
+                        <datalist id="regions">
+                            <option value="Στερεά Ελλάδα">
+                            <option value="Μακεδονία">
+                            <option value="Πελοπόννησος">
+                            <option value="Κρήτη">
+                            <option value="Ήπειρος">
+                            <option value="Θεσσαλία">
+                            <option value="Θράκη">
+                            <option value="Νήσοι Αιγαίου Πελάγους">
+                            <option value="Νήσοι Ιονίου Πελάγους">
+                        </datalist>
 
-                    <label for="postalCode">Τ.Κ.:</label>
-                    <input id="postalCode" name="postalCode" type="text" autocomplete="postal-code"
-                        placeholder="104 34">
+                        <label for="county">Νομός:</label>
+                        <input id="county" name="county" type="text" autocomplete="address-level2" placeholder="Αττική"
+                            list="counties">
+                        <datalist id="counties">
+                            <option value="Αττική">
+                            <option value="Εύβοια">
+                            <option value="Ευρυτανία">
+                            <option value="Φθιώτιδα">
+                            <option value="Αιτωλοακαρνανία">
+                            <option value="Βοιωτία">
+                            <option value="Φωκίδα">
+                        </datalist>
 
-                    <label for="address">Διεύθυνση:</label>
-                    <input id="address" name="address" type="text" autocomplete="address-line1"
-                        placeholder="28ης Οκτωβρίου 76">
-                </fieldset>
+                        <label for="postalCode">Τ.Κ.:</label>
+                        <input id="postalCode" name="postalCode" type="text" autocomplete="postal-code"
+                            placeholder="104 34">
 
-                <fieldset>
-                    <legend>Στοιχεία Πληρωμής</legend>
+                        <label for="address">Διεύθυνση:</label>
+                        <input id="address" name="address" type="text" autocomplete="address-line1"
+                            placeholder="28ης Οκτωβρίου 76">
+                    </fieldset>
 
-                    <input type="radio" id="creditCard" name="payment" value="creditCard">
-                    <label for="creditCard">Πιστωτική κάρτα</label>
+                    <fieldset>
+                        <legend>Στοιχεία Πληρωμής</legend>
 
-                    <input type="radio" id="payPal" name="payment" value="payPal">
-                    <label for="payPal">PayPal</label>
+                        <!-- TODO hidden card infos if not needed -->
 
-                    <input type="radio" id="onDelivery" name="payment" value="onDelivery" checked>
-                    <label for="onDelivery">Αντικαταβολή (+2€)</label>
+                        <fieldset id="payMethod">
+                            <input type="radio" id="creditCard" name="payment" value="creditCard">
+                            <label for="creditCard">Πιστωτική κάρτα</label>
 
-                    <label for="ccNumber">Αριθμός Κάρτας:</label>
-                    <input id="ccNumber" name="ccNumber" type="text" autocomplete="cc-number"
-                        placeholder="0000 1111 2222 3333">
+                            <input type="radio" id="payPal" name="payment" value="payPal">
+                            <label for="payPal">PayPal</label>
 
-                    <label for="ccExpDate">Ημερομηνία Λήξης:</label>
-                    <input id="ccExpDate" name="ccExpDate" type="date" autocomplete="cc-exp">
+                            <input type="radio" id="onDelivery" name="payment" value="onDelivery" checked>
+                            <label for="onDelivery">Αντικαταβολή (+2€)</label>
+                        </fieldset>
 
-                    <label for="ccCode">Κωδικός:</label>
-                    <input id="ccCode" name="ccCode" type="password" autocomplete="cc-csc" placeholder="123">
+                        <label for="ccNumber">Αριθμός Κάρτας:</label>
+                        <input id="ccNumber" name="ccNumber" type="text" autocomplete="cc-number"
+                            placeholder="0000 1111 2222 3333">
 
-                    <label for="ccName">Ονοματεπώνυμο Κατόχου:</label>
-                    <input id="ccName" name="ccName" type="text" autocomplete="cc-name" placeholder="ION IOANNOY">
-                </fieldset>
+                        <label for="ccExpDate">Ημερομηνία Λήξης:</label>
+                        <input id="ccExpDate" name="ccExpDate" type="date" autocomplete="cc-exp">
 
-                <fieldset>
-                    <legend>Στοιχεία Ταυτοποίησης Χρήστη</legend>
+                        <label for="ccCode">Κωδικός:</label>
+                        <input id="ccCode" name="ccCode" type="password" autocomplete="cc-csc" placeholder="123">
 
-                    <label for="username">Username:</label>
-                    <input id="username" name="username" type="text" autocomplete="username" placeholder="ionioan">
+                        <label for="ccName">Ονοματεπώνυμο Κατόχου:</label>
+                        <input id="ccName" name="ccName" type="text" autocomplete="cc-name" placeholder="ION IOANNOY">
+                    </fieldset>
 
-                    <label for="password">Password:</label>
-                    <input id="password" name="password" type="password" autocomplete="new-password">
+                    <fieldset>
+                        <legend>Στοιχεία Ταυτοποίησης Χρήστη</legend>
 
-                    <label for="password1">Password:</label>
-                    <input id="password1" name="password1" type="password" autocomplete="off">
-                </fieldset>
+                        <label for="username">Username:</label>
+                        <input id="username" name="username" type="text" autocomplete="username" placeholder="ionioan">
 
-                <fieldset>
-                    <legend>Επιλογές Επικοινωνίας</legend>
+                        <label for="password">Password:</label>
+                        <input id="password" name="password" type="password" autocomplete="new-password">
 
-                    <input type="radio" id="mail" name="contact" value="mail" checked>
-                    <label for="mail">E-Mail</label>
+                        <label for="password1">Password:</label>
+                        <input id="password1" name="password1" type="password" autocomplete="off">
+                    </fieldset>
 
-                    <input type="radio" id="sms" name="contact" value="sms">
-                    <label for="sms">SMS</label>
+                    <fieldset id="contactMethod">
+                        <legend>Επιλογές Επικοινωνίας</legend>
 
-                    <input type="radio" id="iMess" name="contact" value="iMess">
-                    <label for="iMess">iMessage</label>
-                </fieldset>
+                        <input type="radio" id="mail" name="contact" value="mail" checked>
+                        <label for="mail">E-Mail</label>
 
-                <fieldset>
-                    <legend>Ερωτηματολόγιο</legend>
+                        <input type="radio" id="sms" name="contact" value="sms">
+                        <label for="sms">SMS</label>
 
-                    <label for="askFrequency">Ποιός είναι ο πιο συχνός τρόπος πληρωμής που
-                        χρησιμοποιείται;</label>
-                    <select name="askFrequency" id="askFrequency">
-                        <option value="everyDay">Καθημερινά</option>
-                        <option value="everyWeek">Εβδομαδιαία</option>
-                        <option value="everyMonth">Μηνιαία</option>
-                    </select>
+                        <input type="radio" id="iMess" name="contact" value="iMess">
+                        <label for="iMess">iMessage</label>
+                    </fieldset>
 
-                    <label for="askCategory">Από ποιά κατηγορία προϊόντων αγοράζετε πιο συχνά;</label>
-                    <select name="askCategory" id="askCategory">
-                        <option value="tecnhology">Τεχνολογία</option>
-                        <option value="home">Σπίτι</option>
-                        <option value="auto">Αυτοκίνητο - Μηχανή</option>
-                    </select>
+                    <fieldset>
+                        <legend>Ερωτηματολόγιο</legend>
 
-                    <label for="askPayment">Ποιός είναι ο πιο συχνός τρόπος πληρωμής που
-                        χρησιμοποιείται;</label>
-                    <select name="askPayment" id="askPayment">
-                        <option value="creditCard">Πιστωτική κάρτα</option>
-                        <option value="payPal">PayPal</option>
-                        <option value="onDelivery">Αντικαταβολή</option>
-                    </select>
-                </fieldset>
+                        <label for="askFrequency">Ποιός είναι ο πιο συχνός τρόπος πληρωμής που
+                            χρησιμοποιείται;</label>
+                        <select name="askFrequency" id="askFrequency">
+                            <option value="everyDay">Καθημερινά</option>
+                            <option value="everyWeek">Εβδομαδιαία</option>
+                            <option value="everyMonth">Μηνιαία</option>
+                        </select>
 
-                <fieldset id="checks">
-                    <input type="checkbox" id="approveTerms" name="terms" value="approve" />
-                    <label for="approveTerms">Αποδοχή των <a href="">Όρων και Προϋποθέσεων</a>.</label>
+                        <label for="askCategory">Από ποιά κατηγορία προϊόντων αγοράζετε πιο συχνά;</label>
+                        <select name="askCategory" id="askCategory">
+                            <option value="tecnhology">Τεχνολογία</option>
+                            <option value="home">Σπίτι</option>
+                            <option value="auto">Αυτοκίνητο - Μηχανή</option>
+                        </select>
 
-                    <input type="checkbox" id="subscribeNews" name="newsletter" value="subscribe" checked />
-                    <label for="subscribeNews">Εγγραφή στην εφημερίδα.</label>
-                </fieldset> -->
+                        <label for="askPayment">Ποιός είναι ο πιο συχνός τρόπος πληρωμής που
+                            χρησιμοποιείται;</label>
+                        <select name="askPayment" id="askPayment">
+                            <option value="creditCard">Πιστωτική κάρτα</option>
+                            <option value="payPal">PayPal</option>
+                            <option value="onDelivery">Αντικαταβολή</option>
+                        </select>
+                    </fieldset>
 
-                <button type="submit">Εγγραφή</button>
-            </form>
-        </main>
+                    <fieldset id="checks">
+                        <input type="checkbox" id="approveTerms" name="terms" value="approve" />
+                        <label for="approveTerms">Αποδοχή των <a href="">Όρων και Προϋποθέσεων</a>.</label>
+
+                        <input type="checkbox" id="subscribeNews" name="newsletter" value="subscribe" checked />
+                        <label for="subscribeNews">Εγγραφή στην εφημερίδα.</label>
+                    </fieldset>
+
+                    <button type="submit">Εγγραφή</button>
+                </form>
+            </main>
+        </div>
 
         <div class="footer-item">
             <footer class="footer-content">
