--- a/Exercise5/sign_up.html
+++ b/Exercise5/sign_up.html
@@ -32,7 +32,10 @@
                     <a href="/Exercise5/stores.html">ΚΑΤΑΣΤΗΜΑΤΑ</a>
                     <a href="/Exercise5/contact.html">ΕΠΙΚΟΙΝΩΝΙΑ</a>
                     <a href="/Exercise5/about_us.html">ΣΧΕΤΙΚΑ ΜΕ ΕΜΑΣ</a>
-                    <a href="/Exercise5/index.html" id="login">ΣΥΝΔΕΣΗ</a>
+                    <div id="navigationRight">
+                        <a href="/Exercise5/sign_up.html">ΕΓΓΡΑΦΗ</a>
+                        <a href="/Exercise5/sign_up.html">ΣΥΝΔΕΣΗ</a>
+                    </div>
                 </nav>
             </header>
         </div>
